# Wick2D

./: .gitignore  CMakeLists.txt  README.md  config.cmake  imgui.ini
aux_scripts/: build.sh
docs/: Concept.drawio
include/: extra_functions.cpp  extra_functions.h  include.cmake  structs.cpp  structs.h  vector_math.cpp  vector_math.h
libraries/Entities/: Entities.cmake
libraries/Entities/Base_Entity/: Base_Entity.cpp  Base_Entity.h
libraries/Entities/Main_Entity/: Main_Entity.cpp  Main_Entity.h
libraries/Entities/Square_Entity/: Square_Entity.cpp  Square_Entity.h
libraries/Game_Layers/: Game_Layers.cmake
libraries/Game_Layers/Base/: Base.cpp  Base.h
libraries/game_layers/: game_layer.cmake
libraries/game_layers/base/: base.cpp
libraries/ui/: ui.cmake
libraries/ui/platform/: platformInput.h
resources/: gameData.data
src/: main.cpp  main.h
